force-app/main/default/objects/Account/fields/Additional_Shift_Capability__c.field-meta.xml
<CustomField>
    <fullName>Additional_Shift_Capability__c</fullName>
    <label>Additional Shift Capability</label>
    <length>255</length>
    <type>Text</type>
</CustomField>