force-app/main/default/objects/Account/fields/Agency_Loyalty__c.field-meta.xml
<CustomField>
    <fullName>Agency_Loyalty__c</fullName>
    <label>Agency Loyalty</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Loyal</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 - Neutral</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - At Risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>