force-app/main/default/objects/Account/fields/Agency_Loyalty_Details__c.field-meta.xml
<CustomField>
    <fullName>Agency_Loyalty_Details__c</fullName>
    <label>Agency Loyalty - Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>