force-app/main/default/objects/Account/fields/Artic_Bus_Plans__c.field-meta.xml
<CustomField>
    <fullName>Artic_Bus_Plans__c</fullName>
    <description>Describe the customer&apos;s high-level Articulated Bus Plans</description>
    <label>Articulated Bus Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>