force-app/main/default/objects/Account/fields/ASW_ID__c.field-meta.xml
<CustomField>
    <fullName>ASW_ID__c</fullName>
    <externalId>true</externalId>
    <label>ASW ID</label>
    <length>6</length>
    <type>Text</type>
</CustomField>