force-app/main/default/objects/Account/fields/AVG_BOM_Processing_Hours__c.field-meta.xml
<CustomField>
    <fullName>AVG_BOM_Processing_Hours__c</fullName>
    <label>AVG BOM Processing Hours</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>