force-app/main/default/objects/Account/fields/Bid_Website_Password__c.field-meta.xml
<CustomField>
    <fullName>Bid_Website_Password__c</fullName>
    <description>Password for bid document website</description>
    <label>Bid Website Password</label>
    <length>100</length>
    <type>Text</type>
</CustomField>