force-app/main/default/objects/Account/fields/Bid_Website_URL__c.field-meta.xml
<CustomField>
    <fullName>Bid_Website_URL__c</fullName>
    <description>URL for Bid Documents</description>
    <label>Bid Website URL</label>
    <type>Url</type>
</CustomField>