force-app/main/default/objects/Account/fields/Bid_Website_Username__c.field-meta.xml
<CustomField>
    <fullName>Bid_Website_Username__c</fullName>
    <description>User Name for Bid Document Website</description>
    <label>Bid Website Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>