force-app/main/default/objects/Account/fields/Capabilities_Equipment_expertise_etc__c.field-meta.xml
<CustomField>
    <fullName>Capabilities_Equipment_expertise_etc__c</fullName>
    <label>Capabilities (Equipment, expertise, etc)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>