force-app/main/default/objects/Account/fields/Commodities_Supplied__c.field-meta.xml
<CustomField>
    <fullName>Commodities_Supplied__c</fullName>
    <label>Commodities Supplied</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>