force-app/main/default/objects/Account/fields/Contractor_Purchases_Buses__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Purchases_Buses__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contractor Purchases Buses</label>
    <type>Checkbox</type>
</CustomField>