force-app/main/default/objects/Account/fields/Contractor_Term_Expiration__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Term_Expiration__c</fullName>
    <label>Contractor Term Expiration</label>
    <type>Date</type>
</CustomField>