force-app/main/default/objects/Account/fields/Count_of_Bus_Invoice_Information__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Bus_Invoice_Information__c</fullName>
    <label>Count of Bus Invoice Information</label>
    <summaryForeignKey>Bus_Invoice_Information__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>