force-app/main/default/objects/Account/fields/Customer_Account_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Strategy__c</fullName>
    <label>Customer Account Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>