force-app/main/default/objects/Account/fields/Customer_Experience__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience__c</fullName>
    <label>Customer Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Positive</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - Poor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>