force-app/main/default/objects/Account/fields/Customer_Experience_Details__c.field-meta.xml
<CustomField>
    <fullName>Customer_Experience_Details__c</fullName>
    <label>Customer Experience - Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>