force-app/main/default/objects/Account/fields/Delivery_Details__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Details__c</fullName>
    <label>Delivery Details</label>
    <type>TextArea</type>
</CustomField>