force-app/main/default/objects/Account/fields/Details_of_Rebate_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Details_of_Rebate_Agreement__c</fullName>
    <label>Details of Rebate Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>