force-app/main/default/objects/Account/fields/Display_Board_Color__c.field-meta.xml
<CustomField>
    <fullName>Display_Board_Color__c</fullName>
    <description>Holds customer&apos;s display board color</description>
    <label>Display Board Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>