force-app/main/default/objects/Account/fields/Duns_Number__c.field-meta.xml
<CustomField>
    <fullName>Duns_Number__c</fullName>
    <label>Duns Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>