force-app/main/default/objects/Account/fields/Electric_Bus_Charging_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Electric_Bus_Charging_Strategy__c</fullName>
    <label>Electric Bus Charging Strategy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>