force-app/main/default/objects/Account/fields/Electric_Bus_Conversion_Target_Date__c.field-meta.xml
<CustomField>
    <fullName>Electric_Bus_Conversion_Target_Date__c</fullName>
    <inlineHelpText>When will 100% of their orders be for electric buses.</inlineHelpText>
    <label>Electric Bus Conversion Target Date</label>
    <length>60</length>
    <type>Text</type>
</CustomField>