force-app/main/default/objects/Account/fields/Electric_Bus_Plans__c.field-meta.xml
<CustomField>
    <fullName>Electric_Bus_Plans__c</fullName>
    <description>Describe the customer&apos;s high level plans for electric buses</description>
    <label>Electric Bus Plans</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>