force-app/main/default/objects/Account/fields/Exclude_from_forecast__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_forecast__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude from forecast?</label>
    <type>Checkbox</type>
</CustomField>