force-app/main/default/objects/Account/fields/Field_Service_Rep__c.field-meta.xml
<CustomField>
    <fullName>Field_Service_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Field Service Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>