force-app/main/default/objects/Account/fields/FinalExpenseTotal__c.field-meta.xml
<CustomField>
    <fullName>FinalExpenseTotal__c</fullName>
    <label>FinalExpenseTotal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>