force-app/main/default/objects/Account/fields/Fleet_Count__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Count__c</fullName>
    <formula>X2018_Fleet__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>