force-app/main/default/objects/Account/fields/Fleet_Performance_Updates__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Performance_Updates__c</fullName>
    <label>Fleet Performance Updates</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>