force-app/main/default/objects/Account/fields/Fleet_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Ranking__c</fullName>
    <formula>X2018_Rank__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fleet Ranking</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>