force-app/main/default/objects/Account/fields/Fleet_Replacement_Program__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Replacement_Program__c</fullName>
    <label>Fleet Replacement Program</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>12 Years or 500,000 Miles, whichever comes first</fullName>
            </value>
            <value>
                <fullName>12 Years</fullName>
            </value>
            <value>
                <fullName>13 Years</fullName>
            </value>
            <value>
                <fullName>14 Years</fullName>
            </value>
            <value>
                <fullName>15 Years</fullName>
            </value>
            <value>
                <fullName>16 Years</fullName>
            </value>
            <value>
                <fullName>17 Years</fullName>
            </value>
            <value>
                <fullName>500,000 Miles</fullName>
            </value>
            <value>
                <fullName>10 Years or 350,000 Miles, whichever comes first</fullName>
            </value>
            <value>
                <fullName>20 Years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>