force-app/main/default/objects/Account/fields/Gillig_ID__c.field-meta.xml
<CustomField>
    <fullName>Gillig_ID__c</fullName>
    <externalId>true</externalId>
    <label>Gillig ID</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>