force-app/main/default/objects/Account/fields/Google_Search__c.field-meta.xml
<CustomField>
    <fullName>Google_Search__c</fullName>
    <formula>HYPERLINK(
&quot;http://news.google.com/news/search?en&amp;q=&quot;&amp;Name,
&quot;Google News&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Google Search</label>
    <type>Text</type>
</CustomField>