force-app/main/default/objects/Account/fields/Incumbent_OEM_29_40__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_OEM_29_40__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Blank if GILLIG</inlineHelpText>
    <label>Incumbent OEM (29-40)</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Accounts (Incumbent OEM (29-40))</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>