force-app/main/default/objects/Account/fields/Incumbent_OEM__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_OEM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incumbent OEM</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>