force-app/main/default/objects/Account/fields/Incumbent_OEM_Artic__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_OEM_Artic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Incumbent OEM (Artic)</label>
    <referenceTo>Competitor__c</referenceTo>
    <relationshipLabel>Accounts (Incumbent OEM (Artic))</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>