force-app/main/default/objects/Account/fields/Inspection_Risk_Details__c.field-meta.xml
<CustomField>
    <fullName>Inspection_Risk_Details__c</fullName>
    <label>Inspection Risk - Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>