force-app/main/default/objects/Account/fields/Last_Articulated_Bus_Plan_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Articulated_Bus_Plan_Update__c</fullName>
    <label>Last Articulated Bus Plan Update</label>
    <type>Date</type>
</CustomField>