force-app/main/default/objects/Account/fields/Last_Electric_Bus_Plan_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Electric_Bus_Plan_Update__c</fullName>
    <label>Last Electric Bus Plan Update</label>
    <type>Date</type>
</CustomField>