force-app/main/default/objects/Account/fields/Last_Fleet_Performance_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Fleet_Performance_Update__c</fullName>
    <label>Last Fleet Performance Update</label>
    <type>Date</type>
</CustomField>