force-app/main/default/objects/Account/fields/Last_Fleet_Replacement_Plan_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Fleet_Replacement_Plan_Update__c</fullName>
    <label>Last Fleet Replacement Plan Update</label>
    <type>Date</type>
</CustomField>