force-app/main/default/objects/Account/fields/Last_Fuel_Cell_Bus_Plan_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Fuel_Cell_Bus_Plan_Update__c</fullName>
    <label>Last Fuel Cell Bus Plan Update</label>
    <type>Date</type>
</CustomField>