force-app/main/default/objects/Account/fields/Last_Ridership_Update__c.field-meta.xml
<CustomField>
    <fullName>Last_Ridership_Update__c</fullName>
    <label>Last Ridership Update</label>
    <type>Date</type>
</CustomField>