force-app/main/default/objects/Account/fields/Manuals_FTP__c.field-meta.xml
<CustomField>
    <fullName>Manuals_FTP__c</fullName>
    <label>Manuals FTP</label>
    <type>Url</type>
</CustomField>