force-app/main/default/objects/Account/fields/NDA_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Date__c</fullName>
    <label>NDA Date</label>
    <type>Date</type>
</CustomField>