force-app/main/default/objects/Account/fields/NDA_Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>NDA_Expiration_Date__c</fullName>
    <label>NDA Expiration Date</label>
    <type>Date</type>
</CustomField>