force-app/main/default/objects/Account/fields/New_Start_Considerations__c.field-meta.xml
<CustomField>
    <fullName>New_Start_Considerations__c</fullName>
    <label>New Start Considerations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Customer</fullName>
            </value>
            <value>
                <fullName>Poor Previous Delivery Experience</fullName>
            </value>
            <value>
                <fullName>Inspector</fullName>
            </value>
            <value>
                <fullName>Field Matters</fullName>
            </value>
            <value>
                <fullName>Upcoming Bid</fullName>
            </value>
            <value>
                <fullName>Bid in process</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>