force-app/main/default/objects/Account/fields/NewTripReport__c.field-meta.xml
<CustomField>
    <fullName>NewTripReport__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NewTripReport</label>
    <type>Checkbox</type>
</CustomField>