force-app/main/default/objects/Account/fields/NTD_ID__c.field-meta.xml
<CustomField>
    <fullName>NTD_ID__c</fullName>
    <label>NTD ID</label>
    <length>15</length>
    <type>Text</type>
</CustomField>