force-app/main/default/objects/Account/fields/Number_of_Shifts_per_day__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Shifts_per_day__c</fullName>
    <label>Number of Shifts per day</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>