force-app/main/default/objects/Account/fields/Open_Opportunities__c.field-meta.xml
<CustomField>
    <fullName>Open_Opportunities__c</fullName>
    <label>Open Opportunities</label>
    <summarizedField>Opportunity.Total_Qty__c</summarizedField>
    <summaryFilterItems>
        <field>Opportunity.IsClosed</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>