force-app/main/default/objects/Account/fields/Part_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Part_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>