force-app/main/default/objects/Account/fields/Part_Sales_Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Part_Sales_Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Part Sales Supervisor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>