force-app/main/default/objects/Account/fields/Photo_Approval__c.field-meta.xml
<CustomField>
    <fullName>Photo_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checked box indicates that we have received the customer&apos;s approval to utilize images of their bus in marketing materials</description>
    <label>Photo Approval</label>
    <type>Checkbox</type>
</CustomField>