force-app/main/default/objects/Account/fields/Production_Hours__c.field-meta.xml
<CustomField>
    <fullName>Production_Hours__c</fullName>
    <inlineHelpText>i.e. &quot;6:00-2:30&quot;</inlineHelpText>
    <label>Production Hours</label>
    <length>255</length>
    <type>Text</type>
</CustomField>