force-app/main/default/objects/Account/fields/Project_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>