force-app/main/default/objects/Account/fields/Proposed_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Proposed Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>