force-app/main/default/objects/Account/fields/PSM_is_Current_User__c.field-meta.xml
<CustomField>
    <fullName>PSM_is_Current_User__c</fullName>
    <formula>IF( Project_Sales_Manager__c  = $User.Id , 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSM is Current User</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>