force-app/main/default/objects/Account/fields/Pubs_Unique_Customer_Info__c.field-meta.xml
<CustomField>
    <fullName>Pubs_Unique_Customer_Info__c</fullName>
    <label>Pubs Unique Customer Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>