force-app/main/default/objects/Account/fields/Rebate_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Rebate_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rebate Agreement</label>
    <type>Checkbox</type>
</CustomField>