force-app/main/default/objects/Account/fields/RegionalMgr__c.field-meta.xml
<CustomField>
    <fullName>RegionalMgr__c</fullName>
    <label>RegionalMgr</label>
    <length>64</length>
    <type>Text</type>
</CustomField>