force-app/main/default/objects/Account/fields/Risk_Ranking__c.field-meta.xml
<CustomField>
    <fullName>Risk_Ranking__c</fullName>
    <label>Risk Ranking</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Non-GILLIG</fullName>
                <color>#FF0000</color>
                <label>Non-GILLIG</label>
            </value>
            <value>
                <fullName>Long-term Target</fullName>
                <color>#F3D904</color>
                <label>Long-term Target</label>
            </value>
            <value>
                <fullName>Current Target</fullName>
                <color>#78C953</color>
                <label>Current Target</label>
            </value>
            <value>
                <fullName>Current GILLIG</fullName>
                <color>#0B6FCE</color>
                <label>Current GILLIG</label>
            </value>
            <value>
                <fullName>Parts Only (No Buses)</fullName>
                <color>#A845DC</color>
                <label>Parts Only (No Buses)</label>
            </value>
            <value>
                <fullName>Lost Customer Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>