force-app/main/default/objects/Account/fields/Scheduling_Notes__c.field-meta.xml
<CustomField>
    <fullName>Scheduling_Notes__c</fullName>
    <description>Notes related to scheduling of the production</description>
    <label>Scheduling Notes</label>
    <type>TextArea</type>
</CustomField>