force-app/main/default/objects/Account/fields/Service_Expectations__c.field-meta.xml
<CustomField>
    <fullName>Service_Expectations__c</fullName>
    <label>Service Expectations</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Low</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3 - Moderate</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5 - High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>