force-app/main/default/objects/Account/fields/Service_Expectations_Details__c.field-meta.xml
<CustomField>
    <fullName>Service_Expectations_Details__c</fullName>
    <label>Service Expectations - Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>