force-app/main/default/objects/Account/fields/Service_Territory__c.field-meta.xml
<CustomField>
    <fullName>Service_Territory__c</fullName>
    <description>The Territory based on the customer care department (field service)</description>
    <inlineHelpText>The Territory based on the customer care department (field service)</inlineHelpText>
    <label>Service Territory</label>
    <length>25</length>
    <type>Text</type>
</CustomField>