force-app/main/default/objects/Account/fields/Standard_Delivery_Miles__c.field-meta.xml
<CustomField>
    <fullName>Standard_Delivery_Miles__c</fullName>
    <label>Standard Delivery Miles</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>