force-app/main/default/objects/Account/fields/Summary_Field_1__c.field-meta.xml
<CustomField>
    <fullName>Summary_Field_1__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Summary Field (1)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>