force-app/main/default/objects/Account/fields/Syteline_Bus_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Syteline_Bus_Customer_Number__c</fullName>
    <label>Syteline Bus Customer Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>