force-app/main/default/objects/Account/fields/Syteline_ID__c.field-meta.xml
<CustomField>
    <fullName>Syteline_ID__c</fullName>
    <label>Syteline ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>