force-app/main/default/objects/Account/fields/Technical_Difficulty_Details__c.field-meta.xml
<CustomField>
    <fullName>Technical_Difficulty_Details__c</fullName>
    <label>Technical Difficulty - Details</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>