force-app/main/default/objects/Account/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>20</length>
    <type>Text</type>
</CustomField>