force-app/main/default/objects/Account/fields/Union__c.field-meta.xml
<CustomField>
    <fullName>Union__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Union</label>
    <type>Checkbox</type>
</CustomField>