force-app/main/default/objects/Account/fields/X2011_Rank__c.field-meta.xml
<CustomField>
    <fullName>X2011_Rank__c</fullName>
    <label>2011 Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>