force-app/main/default/objects/Account/fields/X2012_Rank__c.field-meta.xml
<CustomField>
    <fullName>X2012_Rank__c</fullName>
    <label>2012 Rank</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>