force-app/main/default/objects/Account/fields/X2015_Fleet__c.field-meta.xml
<CustomField>
    <fullName>X2015_Fleet__c</fullName>
    <label>2015 Fleet</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>