force-app/main/default/objects/Account/fields/X2016_Fleet__c.field-meta.xml
<CustomField>
    <fullName>X2016_Fleet__c</fullName>
    <label>2016 Fleet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>