force-app/main/default/objects/Account/fields/X2017_Annual_Spend_OEM__c.field-meta.xml
<CustomField>
    <fullName>X2017_Annual_Spend_OEM__c</fullName>
    <label>2017 Annual Spend-OEM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>