force-app/main/default/objects/Account/fields/X2017_Parts_Revenue__c.field-meta.xml
<CustomField>
    <fullName>X2017_Parts_Revenue__c</fullName>
    <label>2017 Parts Revenue</label>
    <summarizedField>Parts_Account__c.X2017_YTD_Sales__c</summarizedField>
    <summaryForeignKey>Parts_Account__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>