force-app/main/default/objects/Account/fields/X2017_Spares_Margin__c.field-meta.xml
<CustomField>
    <fullName>X2017_Spares_Margin__c</fullName>
    <label>2017 Spares Margin</label>
    <summarizedField>Parts_Account__c.X2017_YTD_Spares_Margin__c</summarizedField>
    <summaryForeignKey>Parts_Account__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>