force-app/main/default/objects/Account/fields/X2018_35ft_and_under__c.field-meta.xml
<CustomField>
    <fullName>X2018_35ft_and_under__c</fullName>
    <label>2018 35ft and under</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>